Update to 1.20.4 and code cleanup